--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     </head>
 
     <body>
-        <img src='images/Twitch_Logo_White.png' alt='Twitch logo' class='header'></img>
-        <div class='headerText'>Stream Tracker</div>
-        <br>
         <div class='container-fluid'>
-            <div class='row well viewer'>
-                <div class='col-xs-12'>
-                    <p id='content'></p>
+            <img src='images/Twitch_Logo_White.png' alt='Twitch logo' class='header'></img>
+            <div class='headerText'>Stream Tracker</div>
+            <br>
+            <div class='container-fluid'>
+                <div class='row well viewer'>
+                    <div class='col-xs-12'>
+                        <p id='content'></p>
+                    </div>
                 </div>
             </div>
         </div>
